Updated the error page

--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -2,8 +2,8 @@
 {% block content%}
 <div class="container">
 	<div class="jumbotron text-center">
-		<h3>ERROR!!There is no such page!!</h>
-		<p> To navigate back click here...</p><a href="/" class="btn btn-success">Home</a>
+		<h3>ERROR!!!There is no such page.</h>
+		<p> To Navigate back click here...</p><a href="/" class="btn btn-success">Home</a>
 	</div>
 </div>
 {% endblock %}
