Updated the nav file

--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -11,7 +11,9 @@
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav" style="font-size: 15pt;">
-                <li><a href="/">Home</a></li>
+                <li>
+                    <a href="/">Home</a>
+                </li>
         </div>
     </div>
 </div>
